# motherduck-blueprints

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  action.yml  motherduck.yml  pyproject.toml
.devcontainer/: devcontainer.json
.dive-preview/: .env.example  package-lock.json  package.json  vite.config.ts
.dive-preview/src/: main.tsx
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: blueprints_doctor.yaml  ci.yaml  cleanup_preview_blueprints.yaml  cleanup_preview_bundles.yaml  cleanup_preview_dives.yaml  cleanup_preview_flights.yaml  deploy_blueprints.yaml  deploy_bundles.yaml  deploy_dives.yaml  deploy_flights.yaml  release.yaml
blueprints/wikipedia-pageviews/: README.md
bundles/wikipedia-pageviews/: blueprint.json
context/: README.md
dives/wikipedia-pageviews/: dive_metadata.json
docs/: blueprint-yml-reference.md  customer-onboarding.md  github-setup.md  repository-reference.md  setup-your-repository.md  tooling-and-schema-versioning.md
docs/examples/: wikipedia-pageviews.md
flights/wikipedia-pageviews/: flight.py  flight_metadata.json
schemas/: motherduck-root.schema.json
scripts/: check-release-external-setup.sh  check-release-version.sh  cleanup-preview-bundle.sh  cleanup-preview-dive.sh  cleanup-preview-flight.sh  deploy-bundle.sh  deploy-dive.sh  deploy-flight.sh  mock-test.sh  package-smoke-test.sh  scaffold-smoke-test.sh  validate-bundle.sh  validate-flight.sh
src/md_blueprints/: __init__.py  (+8 more)
tests/: test_cli.py  test_deploy.py  test_init.py  test_migrations.py  test_project.py  test_release_external_setup.py  test_schema.py  test_template.py
tools/: md_blueprints
(+53 files in other folders)
