[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-blueprints"
version = "0.3.0"
description = "Versioned MotherDuck Blueprints CLI for validation, planning, deployment, cleanup, and migrations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "packaging>=24.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
deploy = [
  "duckdb>=1.1",
  "pytz>=2024.1",
]
dev = [
  "duckdb>=1.1",
  "mypy>=1.10",
  "pytest>=8.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
md-blueprints = "md_blueprints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
md_blueprints = [
  "schemas/**/*.json",
  "template_repo/**/*",
  "template_repo/.dive-preview/.env.example",
  "template_repo/.dive-preview/**/*",
  "template_repo/.github/**/*",
  "template_repo/.gitignore",
  "template_repo/context/policies/.gitkeep",
  "template_repo/context/schemas/.gitkeep",
]

[tool.mypy]
exclude = [
  "src/md_blueprints/template_repo/",
]
